# kutes-public

./: .gitattributes  .gitignore  CMakeLists.txt  README.md
patches/: nap-01-font.patch  nap-02-remove-gdk-env.patch  nap-03-wayland-std.patch  nap-05-mingwamd64-cross.patch  nap-07-nonblocking-pipe.patch  nappgui_src.patch
src/: CMakeLists.txt  alloc.c  const.c  expr.c  hist.c  kt.h  kt_constants.c  kutes.c  list.c
src/res/: kutes.sh  logo.icns
support/: Makefile  cross-mingwamd64-toolchain.cmake  cross-osxaarch64-toolchain.cmake  cross-osxamd64-toolchain.cmake  manual
support/exp/: boron.c  kproc.c
support/exp/brn/: CMakeLists.txt  boron.c
support/exp/kprc/: CMakeLists.txt  kproc.c
support/exp/line/: CMakeLists.txt  line.c
support/patches/: brn-01-isolate.patch  brn-02-cmake.patch  brn-03-str-cpy.patch  nap-02-remove-gdk-env.patch+  nap-04-windows-headers.patch  nap-04-windows-headers.patch+  nap-05-mingwamd64-cross.patch+  nap-06-osxcross.patch+  nap-07-nonblocking-pipe.patch  nap-08-nowindow-cmd.patch  nap-09-proc-kill.patch+  nap-10-proc-wait.patch  nap-10-proc-wait.patch+  nap-11-stderr-nonblock.patch+  nap-12-tableview.patch  nap-13-textview-del-sel.patch  nap-13-textview-del-sel.patch+  nap-14-popup-del.patch+  nap-15-rm-curl-dep.patch  nap-16-wayland-size.patch  nap-17-wayland-resize.patch  nap-17-wayland-resize.patch+  nap-18-gnome-mode.patch  nap-19-theme-invert.patch  nap-20-checkpoint-8639d19.patch  nap-21-checkpoint-788f43a.patch-  nap-22-checkpoint-4732dc9.patch  rax-01-cmake-version.patch
